Add hash to home url

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container-fluid p-0">
     <nav class="navbar navbar-dark navbar-expand bg-dark">
-      <a class="navbar-brand" href="#">Star WARS</a>
+      <a class="navbar-brand" href="#/">Star WARS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-toggler">
         <span class="navbar-toggler-icon"></span>
       </button>
