Switch to english

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,16 @@
       <div class="collapse navbar-collapse" id="navbar-toggler">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link"  id="home" href="#/">Home<span class="sr-only"></span></a>
+            <a class="nav-link"  id="home" href="#/">home<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="people" href="#/people">Personajes<span class="sr-only"></span></a>
+            <a class="nav-link" id="people" href="#/people">characters<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="saved" href="#/saved">Guardado<span class="sr-only"></span></a>
+            <a class="nav-link" id="saved" href="#/saved">saved<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="contact" href="#/contact">Contacto<span class="sr-only"></span></a>
+            <a class="nav-link" id="contact" href="#/contact">contact<span class="sr-only"></span></a>
           </li>
         </ul>
       </div>
@@ -34,6 +34,7 @@
     <!-- Append content to .main -->
     <div class="container-fluid main p-0">
       <h1 class="main-title">star wars api</h1>
+      <p class="logo">#</p>
     </div>
   </div>
 
