--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,12 @@
       </div>
     </nav>
     <!-- Append content to .main -->
-    <div class="container-fluid main p-0">
-      <h1 class="main-title">star wars api</h1>
-      <p class="logo">#</p>
+    <div class="container-fluid main p-0 d-flex justify-content-around align-items-center">
+      
+      <div class="">
+        <h1 class="main-title">star wars api</h1>
+        <p class="logo">$#</p>
+      </div>
     </div>
   </div>
 
