--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,7 @@
     </nav>
     <!-- Append content to .main -->
     <div class="container-fluid main p-0 d-flex justify-content-around align-items-center">
-      
-      <div class="">
+      <div>
         <h1 class="main-title">star wars api</h1>
         <p class="logo">$#</p>
       </div>
